welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: forward reference extends over definition of variable nbBiscuit
		nbBiscuit = nbBiscuit + 1	
                ^